Fix HackED beta title on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -440,6 +440,16 @@ footer {
         margin: 0;
     }
 
+    header {
+        h1 {
+            font-size: 2.7em;
+        }
+
+        .beta {
+            margin-left: 0px;
+        }
+    }
+
     .bubble-nav {
         .bubble {
             width: 90px;
